src/test/ui/const-generics/issues/issue-83765.stderr
error[E0308]: method not compatible with trait
  --> $DIR/issue-83765.rs:49:5
   |
LL |     fn size(&self) -> [usize; DIM] {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `<LazyUpdim<'a, T, <T as TensorDimension>::DIM, DIM> as TensorDimension>::DIM`, found `DIM`
   |
   = note: expected constant `<LazyUpdim<'a, T, <T as TensorDimension>::DIM, DIM> as TensorDimension>::DIM`
              found constant `DIM`

error[E0308]: method not compatible with trait
  --> $DIR/issue-83765.rs:57:5
   |
LL |     fn bget(&self, index: [usize; DIM]) -> Option<Self::Element> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `<LazyUpdim<'a, T, <T as TensorDimension>::DIM, DIM> as TensorDimension>::DIM`, found `DIM`
   |
   = note: expected constant `<LazyUpdim<'a, T, <T as TensorDimension>::DIM, DIM> as TensorDimension>::DIM`
              found constant `DIM`

error[E0308]: method not compatible with trait
  --> $DIR/issue-83765.rs:84:5
   |
LL |     fn size(&self) -> [usize; DIM] {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `<BMap<'a, R, T, F, DIM> as TensorDimension>::DIM`, found `DIM`
   |
   = note: expected constant `<BMap<'a, R, T, F, DIM> as TensorDimension>::DIM`
              found constant `DIM`

error[E0308]: method not compatible with trait
  --> $DIR/issue-83765.rs:96:5
   |
LL |     fn bget(&self, index: [usize; DIM]) -> Option<Self::Element> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `<BMap<'a, R, T, F, DIM> as TensorDimension>::DIM`, found `DIM`
   |
   = note: expected constant `<BMap<'a, R, T, F, DIM> as TensorDimension>::DIM`
              found constant `DIM`

error[E0308]: method not compatible with trait
  --> $DIR/issue-83765.rs:108:5
   |
LL |     fn size(&self) -> [usize; 1] {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `<Vec<T> as TensorDimension>::DIM`, found `1`
   |
   = note: expected constant `<Vec<T> as TensorDimension>::DIM`
              found constant `1`

error[E0308]: method not compatible with trait
  --> $DIR/issue-83765.rs:114:5
   |
LL |     fn bget(&self, index: [usize; 1]) -> Option<T> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `<Vec<T> as TensorDimension>::DIM`, found `1`
   |
   = note: expected constant `<Vec<T> as TensorDimension>::DIM`
              found constant `1`

error[E0308]: mismatched types
  --> $DIR/issue-83765.rs:60:27
   |
LL |         if !self.inbounds(index) {
   |                           ^^^^^ expected `<LazyUpdim<'_, T, <T as TensorDimension>::DIM, DIM> as TensorDimension>::DIM`, found `DIM`
   |
   = note: expected constant `<LazyUpdim<'_, T, <T as TensorDimension>::DIM, DIM> as TensorDimension>::DIM`
              found constant `DIM`

error[E0277]: the trait bound `[usize; _]: Default` is not satisfied
  --> $DIR/issue-83765.rs:65:41
   |
LL |         let newindex: [usize; T::DIM] = Default::default();
   |                                         ^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `[usize; _]`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<'a, T: Broadcastable, const DIM: usize> Broadcastable for LazyUpdim<'a, T, { T::DIM }, DIM> where [usize; _]: Default {
   |                                                                                                  +++++++++++++++++++++++++

error: unconstrained generic constant
  --> $DIR/issue-83765.rs:86:24
   |
LL |         self.reference.size()
   |                        ^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); Self::DIM]:`
note: required by a bound in `TensorSize::size`
  --> $DIR/issue-83765.rs:15:31
   |
LL |     fn size(&self) -> [usize; Self::DIM];
   |                               ^^^^^^^^^ required by this bound in `TensorSize::size`

error[E0308]: mismatched types
  --> $DIR/issue-83765.rs:86:9
   |
LL |         self.reference.size()
   |         ^^^^^^^^^^^^^^^^^^^^^ expected `DIM`, found `<T as TensorDimension>::DIM`
   |
   = note: expected constant `DIM`
              found constant `<T as TensorDimension>::DIM`

error: unconstrained generic constant
  --> $DIR/issue-83765.rs:98:24
   |
LL |         self.reference.bget(index).map(&self.closure)
   |                        ^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); Self::DIM]:`
note: required by a bound in `Broadcastable::bget`
  --> $DIR/issue-83765.rs:23:35
   |
LL |     fn bget(&self, index: [usize; Self::DIM]) -> Option<Self::Element>;
   |                                   ^^^^^^^^^ required by this bound in `Broadcastable::bget`

error[E0308]: mismatched types
  --> $DIR/issue-83765.rs:98:29
   |
LL |         self.reference.bget(index).map(&self.closure)
   |                             ^^^^^ expected `<T as TensorDimension>::DIM`, found `DIM`
   |
   = note: expected constant `<T as TensorDimension>::DIM`
              found constant `DIM`

error[E0308]: mismatched types
  --> $DIR/issue-83765.rs:122:15
   |
LL |     let bbv = bv.bmap(|x| x * x);
   |               ^^^^^^^^^^^^^^^^^^ expected `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`, found `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`
   |
   = note: expected constant `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`
              found constant `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`

error[E0308]: mismatched types
  --> $DIR/issue-83765.rs:124:43
   |
LL |     println!("The size of v is {:?}", bbv.bget([0, 2]).expect("Out of bounds."));
   |                                           ^^^^ expected `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`, found `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`
   |
   = note: expected constant `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`
              found constant `<LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM`

error[E0308]: mismatched types
  --> $DIR/issue-83765.rs:124:48
   |
LL |     println!("The size of v is {:?}", bbv.bget([0, 2]).expect("Out of bounds."));
   |                                                ^^^^^^ expected `<BMap<'_, {integer}, LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2>, [closure@$DIR/issue-83765.rs:122:23: 122:26], <LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM> as TensorDimension>::DIM`, found `2`
   |
   = note: expected constant `<BMap<'_, {integer}, LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2>, [closure@$DIR/issue-83765.rs:122:23: 122:26], <LazyUpdim<'_, Vec<{integer}>, <Vec<{integer}> as TensorDimension>::DIM, 2> as TensorDimension>::DIM> as TensorDimension>::DIM`
              found constant `2`

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
